--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/Mirza404/rest-api-demo#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
